	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/mesh.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/metadata.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/postprocess.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/quaternion.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/quaternion.inl
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/scene.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/texture.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/types.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/vector2.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/vector2.inl
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/vector3.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/vector3.inl
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/version.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/lib/assimp_debug-dll_win32/assimpd.lib
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/lib/assimp_release-dll_win32/assimp.lib
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/23.17_11_24.30.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
